# kalgory-py

./: .bumpversion.cfg  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  _version.py  kalgory.py  library.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  version_scheme.py
.github/ISSUE_TEMPLATE/: other-issue.md
.github/workflows/: cd.yaml  ci.yaml
kalgory/bindings/block/: __init__.py  types.py
kalgory/component/: __init__.py  block.py  utility.py
tests/: .gitignore  guest.py  test_kalgory.py
wit/: block.wit
