[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kalgory"
authors = [{name = "kalgory", email = "developer@kalgory.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]

[project.urls]
Home = "https://kalgory.com"

[project.optional-dependencies]
dev = [
    "componentize-py",
    "pytest",
    "wasmtime",
]
