[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "kalgory"
version = "0.1.1"
authors = [
  { name="Chu Wei Chang", email="chuweichang0319@gmail.com" },
  { name="ZhaoTzuHsien", email="danny900714@gmail.com" }
]
description = "Python library for kalgory, a visualization and drag n' drop tool for algorithmic trader."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: Windows",
]
[tool.hatch.build.targets.wheel]
packages = ["kalgory-py/kalgory"]
include = ["kalgory-py/kalgory/**"]


[project.urls]
Homepage = "https://github.com/kalgory-com/kalgory-py"
Issues = "https://github.com/kalgory-com/kalgory-py/issues"