[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
[project]
name = "kalgory"
dynamic = ["version"]
authors = [
  { name="Chu Wei Chang", email="chuweichang0319@gmail.com" },
  { name="ZhaoTzuHsien", email="danny900714@gmail.com" }
]
description = "Python library for kalgory, a visualization and drag n' drop tool for algorithmic trader."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: Windows",
]
[tool.hatch.build.targets.wheel]
packages = ["kalgory-py/kalgory"]
include = ["kalgory-py/kalgory/**"]
[tool.setuptools_scm]
version_file = "_version.py"
version_scheme = "version_scheme:custom_version_scheme"
local_scheme = "version_scheme:custom_local_scheme"
[project.urls]
Homepage = "https://github.com/kalgory-com/kalgory-py"
Issues = "https://github.com/kalgory-com/kalgory-py/issues"